--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FrontShare - The Browser Event Loop</title>
+    <title>The Browser Event Loop</title>
   </head>
   <body>
     <div id="root"></div>
